- Removed configurator.py and dev.html from root since the files are no longer used and only cause confusion - Enabled overscroll option so the bottom of a document doesn't get hidden by the keyboard on mobile

--- a/hass_configurator/dev.html
+++ b/hass_configurator/dev.html
@@ -2874,6 +2874,7 @@
     if (localStorage.hasOwnProperty("pochass")) {
         editor.setOptions(JSON.parse(localStorage.pochass));
         editor.setOptions({
+            scrollPastEnd: 0.5,
             enableBasicAutocompletion: true,
             enableSnippets: true,
             useWorker: false
