--- a/hass_configurator/dev.html
+++ b/hass_configurator/dev.html
@@ -2860,6 +2860,7 @@
 <script>
     ace.require("ace/ext/language_tools");
     var editor = ace.edit("editor");
+    editor.setOptions({scrollPastEnd: .5});
     editor.on("input", function() {
         if (editor.session.getUndoManager().isClean()) {
             $('.markdirty').each(function(i, o){o.classList.remove('red');});
@@ -2874,7 +2875,6 @@
     if (localStorage.hasOwnProperty("pochass")) {
         editor.setOptions(JSON.parse(localStorage.pochass));
         editor.setOptions({
-            scrollPastEnd: 0.5,
             enableBasicAutocompletion: true,
             enableSnippets: true,
             useWorker: false
